--- a/Videoclub/.project
+++ b/Videoclub/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Videoclub</name>
+	<name>ProyectoVideoclub-Master</name>
 	<comment></comment>
 	<projects>
 	</projects>
